--- a/index.html
+++ b/index.html
@@ -1,5 +1,1 @@
-<p>hello hello world</p>
-<p>hey there </p>
-<p>i wanna tell you something </p>
-<p>Ea sala cup namde</p>
-<p></p>
+<h1> The question is not how , but the actual question is when </h1>
